# REF: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# REF: https://peps.python.org/pep-0621/

[project]
name = "ocaml-docset-backend" # We're repurposing this field to hold the GCP Project's name.
version = "0.0.0"
requires-python = ">= 3.12" # This 'Version Specifier' string needs to be kept simple because we also transform it into the name of a GCP Runtime.
dependencies = [
  "functions-framework == 3.*",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
