# REF: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# REF: https://peps.python.org/pep-0621/

[project]
name = "ocaml-docset-backend" # We're repurposing this field to hold the GCP Project's name.
version = "0.0.0"
requires-python = ">= 3.13" # This 'Version Specifier' string needs to be kept simple because we also transform it into the name of a GCP Runtime.
dependencies = [
  "functions-framework ~=3.8",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------

# NOTE: The following copied from my _pyproject/general.toml file

#
# REF: https://docs.astral.sh/ruff/configuration/
# REF: https://docs.astral.sh/ruff/settings/
#
[tool.ruff]
#line-length = 40

#
# REF: https://microsoft.github.io/pyright/#/configuration
#
[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"
reportUnknownVariableType = "error"

reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = "error"
