# REF: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# REF: https://peps.python.org/pep-0621/

[project]
name = "ocaml-docset-backend" # We're repurposing this field to hold the GCP Project's name.
version = "0.0.0"
requires-python = ">= 3.13" # This 'Version Specifier' string needs to be kept simple because we also transform it into the name of a GCP Runtime.
dependencies = [
  "functions-framework ~=3.8",
]

# ------------------------------------------------------------

#
# NOTE: This section must exist, for Ruff to respect `[project].requires-python`.
#       https://docs.astral.sh/ruff/configuration/#config-file-discovery
#       https://docs.astral.sh/ruff/configuration/#inferring-the-python-version
#
# REF: https://docs.astral.sh/ruff/configuration/
# REF: https://docs.astral.sh/ruff/settings/
#
[tool.ruff]
#line-length = 40

#
# REF: https://microsoft.github.io/pyright/#/configuration
#
[tool.pyright]
# @todo Remove this duplication if/when Pyright or Basedpyright respect the `[project].requires-python` value
# @→    https://github.com/DetachHead/basedpyright/issues/921
pythonVersion = "3.13"

venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"

reportUnnecessaryTypeIgnoreComment = true
reportUnknownVariableType = "error"
reportMatchNotExhaustive = "error"
